# c-generic-data-structures

./: .gitignore  CMakeLists.txt  Makefile  build.sh  todo.txt
include/: dll.h  errors.h  generics.h  linked_list.h  sll.h
src/: dll.c  dll.h  errors.h  generics.h  linked_list.c  sll.c
test/: linked_lists_tests.h  main_tests.c  main_tests.h  sll_test.c  sll_test.h
tests/: linked_lists_tests.c  linked_lists_tests.h  main_tests.c
